--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ sitemap:
 					<div id="intro">
             <h1>Medical Data Journey</h1>
 						<h2>CDM, Clinical NLP, Text minning</h2>
-						<p>뉴욕간호사의 의료 데이터 이야기<a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
+						<p>뉴욕간호사의 의료 데이터 이야기</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
