--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>Medical Data Journey</h1>
-						<h2>CDM, Clinical NLP, Text minning</h2>
-						<p>뉴욕간호사의 의료 데이터 이야기</p>
+						<h2>Nurse Programmer's stroy</h2>
+						<p>CDM, Clinical NLP, Text minning</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
