--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: null
-title: Medical Data Journey
+title: Nurse programmer's story
 description: Medical data story written by Mina Kim
 sitemap:
     priority: 1.0
@@ -27,8 +27,8 @@ sitemap:
 
 				<!-- Intro -->
 					<div id="intro">
-            <h1>Medical Data Journey</h1>
-						<h2>Nurse Programmer's stroy</h2>
+            <h1>Nurse Programmer's stroy</h1>
+						<h2>Mina's Journey of Medical Data</h2>
 						<p>CDM, Clinical NLP, Text minning</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
