--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ sitemap:
 
 				<!-- Intro -->
 					<div id="intro">
-            <h1>Nurse Programmer's stroy</h1>
-						<h2>Mina's Journey of Medical Data</h2>
-						<p>CDM, Clinical NLP, Text minning</p>
+            <h1>Medical Data Journey</h1>
+						<h2>간호사 데이터 분석가의 의료 데이터 이야기</h2>
+						<p>CDM, Clinical NLP, Text mining</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
