--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ sitemap:
 
 				<!-- Header -->
 					<header id="header">
-						<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
+						<a href="{{ "/" | absolute_url }}" class="logo">Start Journey</a>
 					</header>
 
 				<!-- Nav -->
