--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ sitemap:
 
 				<!-- Intro -->
 					<div id="intro">
-            <h1>Medical Data Journey</h1>
-						<h2>간호사 데이터 분석가의 의료 데이터 이야기</h2>
+            <h1>Medical Data Lab</h1>
+						<h2>서버실 간호사의 의료 데이터 이야기</h2>
 						<p>CDM, Clinical NLP, Text mining</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
