--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ sitemap:
 
 				<!-- Header -->
 					<header id="header">
-						<a href="{{ "/" | absolute_url }}" class="logo">Medical Data Journey</a>
+						<a href="{{ "/" | absolute_url }}" class="logo">Medical Data Lab</a>
 					</header>
 
 				<!-- Nav -->
@@ -57,8 +57,8 @@ sitemap:
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Massively is a versatile Jekyll theme</a></h2>
-									<p>With only a few edits, you can have a stunningly beautiful website <br />
+									<h2><a href="#">Medical Data Journey</a></h2>
+									<p>  <br />
                     nearly out of the box. Of course... you can always take it further <br />
                     and make it something even more amazing!</p>
 								</header>
