--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ sitemap:
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Medical Data Journey</a></h2>
-									<p>  <br />
-                    nearly out of the box. Of course... you can always take it further <br />
+									<p>
+                    nearly out of the box. Of course... you can always take it further
                     and make it something even more amazing!</p>
 								</header>
 								<a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a>
