--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>Medical Data Lab</h1>
-						<h2>서버실 간호사의 의료 데이터 이야기</h2>
-						<p>CDM, Clinical NLP, Text mining</p>
+						<p>서버실 간호사의 의료 데이터 이야기</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -59,6 +58,7 @@ sitemap:
 								<header class="major">
 									<h2><a href="#">Medical Data Journey</a></h2>
 									<p>
+										
                     nearly out of the box. Of course... you can always take it further
                     and make it something even more amazing!</p>
 								</header>
